--- a/boards/shields/charybdis-bt/charybdis_pmw3360.dtsi
+++ b/boards/shields/charybdis-bt/charybdis_pmw3360.dtsi
@@ -1,17 +1,28 @@
 &pinctrl {
     spi0_default: spi0_default {
         group1 {
-            pinmux = <SPI0_CSN_P3>, <SPI0_SCK_P0>, <SPI0_TX_P2>;
+            psels = <NRF_PSEL(SPIM_SCK, 0, 0)>,
+                <NRF_PSEL(SPIM_MOSI, 0, 2)>,
+                <NRF_PSEL(SPIM_MISO, 0, 1)>;
         };
-        group2 {
-            pinmux = <SPI0_RX_P1>;
-            input-enable;
+    };
+
+    spi0_sleep: spi0_sleep {
+        group1 {
+            psels = <NRF_PSEL(SPIM_SCK, 0, 0)>,
+                <NRF_PSEL(SPIM_MOSI, 0, 2)>,
+                <NRF_PSEL(SPIM_MISO, 0, 1)>;
+            low-power-enable;
         };
     };
 };
 
 &spi0 {
     status = "okay";
+    compatible = "nordic,nrf-spim";
+    pinctrl-0 = <&spi0_default>;
+    pinctrl-1 = <&spi0_sleep>;
+    pinctrl-names = "default", "sleep";
     cs-gpios = <&gpio0 3 GPIO_ACTIVE_LOW>;
 
     trackball: trackball@0 {
