--- a/build.yaml
+++ b/build.yaml
@@ -33,6 +33,7 @@ include:
     cmake-args: -DCONFIG_ZMK_STUDIO=y
   - board: nice_nano_v2 # Replace with the Pro Micro-compatible board you're using
     shield: tester_pro_micro
+    format: bt
   # # Colemak DH BT
   # - board: nice_nano_v2
   #   shield: charybdis_left
