--- a/.github/workflows/user_config_build.yaml
+++ b/.github/workflows/user_config_build.yaml
@@ -127,7 +127,7 @@ jobs:
             echo "config files ready"
             
             # Copy keymap & physical layouts
-            if [ "${{ env.shield }}" != "settings_reset" ]; then
+            if [ "${{ env.shield }}" != "settings_reset" ] && [ "${{ env.shield }}" != "tester_pro_micro" ]; then
               # Copy physical layout file to shield directory
               mv -v "$base_config_path/charybdis-layouts.dtsi" \
               "${GITHUB_WORKSPACE}/boards/shields/charybdis-${{ env.format }}/"
