--- a/boards/shields/charybdis-bt/charybdis_pmw3360.dtsi
+++ b/boards/shields/charybdis-bt/charybdis_pmw3360.dtsi
@@ -29,7 +29,7 @@
         compatible = "pixart,pmw3360";
         status = "okay";
         reg = <0>;
-        spi-max-frequency = <100000>;
+        spi-max-frequency = <2000000>;
         cpi = <1000>;
     };
 };
