--- a/boards/shields/charybdis-bt/charybdis_pmw3360.dtsi
+++ b/boards/shields/charybdis-bt/charybdis_pmw3360.dtsi
@@ -37,6 +37,7 @@
 / {
     trackball_listener {
         compatible = "zmk,input-listener";
+        status = "okay";
         device = <&trackball>;
     };
 };
