trying to log stuff

--- a/boards/shields/charybdis-bt/charybdis_right.conf
+++ b/boards/shields/charybdis-bt/charybdis_right.conf
@@ -4,6 +4,12 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=1
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 
+## Logging
+CONFIG_LOG=y
+CONFIG_ZMK_LOG_LEVEL_DBG=y
+CONFIG_SPI_LOG_LEVEL_DBG=y
+CONFIG_INPUT_LOG_LEVEL_DBG=y
+
 ## PMW3360 Driver
 ## https://github.com/george-norton/zmk-driver-pmw3360
 CONFIG_SPI=y
