--- a/boards/shields/charybdis-bt/charybdis_right.conf
+++ b/boards/shields/charybdis-bt/charybdis_right.conf
@@ -9,6 +9,7 @@ CONFIG_LOG=y
 CONFIG_ZMK_LOG_LEVEL_DBG=y
 CONFIG_SPI_LOG_LEVEL_DBG=y
 CONFIG_INPUT_LOG_LEVEL_DBG=y
+CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=8000
 
 ## PMW3360 Driver
 ## https://github.com/george-norton/zmk-driver-pmw3360
