--- a/build.yaml
+++ b/build.yaml
@@ -29,7 +29,7 @@ include:
     keymap: qwerty
     format: bt
     artifact-name: charybdis_qwerty_right
-    snippet: studio-rpc-usb-uart
+    snippet: studio-rpc-usb-uart zmk-usb-logging
     cmake-args: -DCONFIG_ZMK_STUDIO=y
   - board: nice_nano_v2 # Replace with the Pro Micro-compatible board you're using
     shield: tester_pro_micro
