--- a/boards/shields/charybdis-bt/charybdis_right.conf
+++ b/boards/shields/charybdis-bt/charybdis_right.conf
@@ -5,6 +5,7 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 
 ## Logging
+CONFIG_ZMK_USB_LOGGING=y
 CONFIG_LOG=y
 CONFIG_ZMK_LOG_LEVEL_DBG=y
 CONFIG_SPI_LOG_LEVEL_DBG=y
