--- a/build.yaml
+++ b/build.yaml
@@ -31,7 +31,9 @@ include:
     artifact-name: charybdis_qwerty_right
     snippet: studio-rpc-usb-uart
     cmake-args: -DCONFIG_ZMK_STUDIO=y
-
+  - board: nice_nano_v2 # Replace with the Pro Micro-compatible board you're using
+    shield: tester_pro_micro
+    format: bt
   # # Colemak DH BT
   # - board: nice_nano_v2
   #   shield: charybdis_left
