--- a/.github/workflows/user_config_build.yaml
+++ b/.github/workflows/user_config_build.yaml
@@ -115,19 +115,19 @@ jobs:
         run: |
           if [ "${{ env.base_dir }}" != "${GITHUB_WORKSPACE}" ]; then
             apt-get -qq update && apt-get -q install -o Dpkg::Progress-Fancy="0" -o APT::Color="0" -o Dpkg::Use-Pty="0" tree
-            
+
             # Define base directory for config
             base_config_path="${{ env.base_dir }}/${{ inputs.config_path }}"
 
             # Create config directory
             mkdir -p "$base_config_path"
-            
+
             # Copy config files
             cp -R "${{ inputs.config_path }}"/* "$base_config_path/"
             echo "config files ready"
-            
+
             # Copy keymap & physical layouts
-            if [ "${{ env.shield }}" != "settings_reset" ]; then
+            if [ "${{ env.shield }}" != "settings_reset" ] && [ "${{ env.shield }}" != "tester_pro_micro" ]; then
               # Copy physical layout file to shield directory
               mv -v "$base_config_path/charybdis-layouts.dtsi" \
               "${GITHUB_WORKSPACE}/boards/shields/charybdis-${{ env.format }}/"
