--- a/config/west.yml
+++ b/config/west.yml
@@ -1,22 +1,22 @@
 manifest:
   remotes:
-    - name: zmkfirmware
-      url-base: https://github.com/petejohanson
-    - name: badjeff
-      url-base: https://github.com/badjeff
+  - name: zmkfirmware
+    url-base: https://github.com/zmkfirmware
+  - name: badjeff
+    url-base: https://github.com/badjeff
   projects:
-    - name: zmk
-      remote: zmkfirmware
-      revision: feat/pointers-with-input-processors
-      import: app/west.yml
-    - name: zmk-pmw3610-driver
-      remote: badjeff
-      revision: main
-    - name: zmk-split-peripheral-input-relay
-      remote: badjeff
-      revision: main
-    - name: zmk-input-behavior-listener
-      remote: badjeff
-      revision: main
+  - name: zmk
+    remote: zmkfirmware
+    revision: main
+    import: app/west.yml
+  - name: zmk-pmw3610-driver
+    remote: badjeff
+    revision: main
+  - name: zmk-split-peripheral-input-relay
+    remote: badjeff
+    revision: main
+  - name: zmk-input-behavior-listener
+    remote: badjeff
+    revision: main
   self:
     path: config
